--- a/supabase/config.toml
+++ b/supabase/config.toml
@@ -1,11 +1,16 @@
-project_id = "mjruadmnoaqeprygjcre"
+project_id = "irqmzknferdrvcquwxnt"
+
+# Configuration for the 'test' function
 [functions.test]
 enabled = true
 verify_jwt = true
 import_map = "./functions/test/deno.json"
-# Uncomment to specify a custom file path to the entrypoint.
-# Supported file extensions are: .ts, .js, .mjs, .jsx, .tsx
 entrypoint = "./functions/test/index.ts"
-# Specifies static files to be bundled with the function. Supports glob patterns.
-# For example, if you want to serve static HTML pages in your function:
-# static_files = [ "./functions/test/*.html" ]
+
+# Configuration for the 'check-subscription' function
+[functions.check-subscription]
+enabled = true
+verify_jwt = false  
+# CHANGED: Point to the new standard Deno configuration file
+import_map = "./functions/check-subscription/deno.json" 
+entrypoint = "./functions/check-subscription/index.ts"
